data/derived/comb/progs/unify/prog2877.ml.out
Characters 8-14:
  let _ = digits -1;;
          ^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
